--- a/src/main/resources/static/css/plugins/presentation/style.css
+++ b/src/main/resources/static/css/plugins/presentation/style.css
@@ -482,7 +482,7 @@ p {
 
 /*----------------------------------------- 6) Hero --------------------------------------------------*/
 #home {
-  background: url('../../../img/presentation/hero1.jpeg');
+  background: url('../../../img/presentation/hero2.jpg');
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -889,11 +889,11 @@ ul.portfolio-image li .desc{
   width: 100%;
 }
 .bg-about {
-  background: url('../../../img/presentation/reza.jpg');
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background: url('../../../img/presentation/datou.jpg');
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain;
   background-repeat: no-repeat;
   position: relative;
   padding: 0;
